[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.0.1"
description = ""
authors = []

[tool.seaplane]
main = "main.py"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
seaplane = "^{{cookiecutter.seaplane_version}}"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
